fix home/about pages

--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -4,8 +4,7 @@
     <div class="footer__inner">
       <div class="footer__links">
         <a class="logo footer__link" href="index.html">
-          <img class="logo__img" src="./images/logo.svg" alt="dreamspacecreators" width="36" height="39">
-          dreamspacecreators
+          <img class="logo__img" src="./images/logo.svg" alt="dreamspacecreators" width="352" height="39">
         </a>
         <a class="footer__link" href="mailto:contact@dreamspacecreators.com">contact@dreamspacecreators.com</a>
       </div>
@@ -27,13 +26,13 @@
           </li>
 
           <li class="footer__item">
-            <a class="footer__link" href="about.html">
+            <a class="footer__link" href="portfolio.html">
               Portfolio
             </a>
           </li>
 
           <li class="footer__item">
-            <a class="footer__link" href="index.html#reviews">
+            <a class="footer__link" href="client-resources.html">
               Client Resources
             </a>
           </li>
@@ -66,7 +65,7 @@
 
 
 <script src="https://forms.app/static/embed.js" type="text/javascript" async defer
-  onload="new formsapp('65cdfd9f9bca4c6abdbfd480', 'popup', {'overlay':'rgba(45,45,45,0.5)','button':{'color':'transparent','text':'Sign Up'},'width':'800px','height':'600px','openingAnimation':{'entrance':'animate__fadeIn','exit':'animate__fadeOut'}});"></script>
+  onload="new formsapp('65e195cd4bfcc0c8d0761d2f', 'popup', {'overlay':'rgba(45,45,45,0.5)','button':{'color':'transparent','text':'Sign Up'},'width':'800px','height':'600px','openingAnimation':{'entrance':'animate__fadeIn','exit':'animate__fadeOut'}});"></script>
 
 <div id="form-request">
   <iframe allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera"
