--- a/src/html/about/_guide.html
+++ b/src/html/about/_guide.html
@@ -4,15 +4,8 @@
       Our Guiding Stars
     </h2>
     <div class="guide__content">
-      <div class="guide__imgs">
-        <div class="guide__img overlay" style="background-image: url('./images/about/guide-1.jpeg');width: 400px; height: 420px;"></div>
-        <div class="guide__img overlay" style="background-image: url('./images/about/guide-2.jpeg');width: 400px; height: 200px;"></div>
-      </div>
+      <div class="guide__imgs" style="background-image: url('./images/about/guiding-stars.jpeg');width: 691px; height: 654px;"></div>
 
-      <div class="guide__imgs">
-        <div class="guide__img overlay" style="background-image: url('./images/about/guide-3.jpeg');width: 250px; height: 200px;"></div>
-        <div class="guide__img overlay" style="background-image: url('./images/about/guide-4.jpeg');width: 250px; height: 423px;"></div>
-      </div>
       <ul class="guide__list">
         <li class="guide__item">
           <h3>Creativity</h3>
