--- a/src/html/about/_unveil.html
+++ b/src/html/about/_unveil.html
@@ -15,7 +15,7 @@
           Meeting with the client to discuss their needs, preferences, and budget
         </p>
       </div>
-      <div class="unveil__number">01</div>
+      <span class="unveil__number">01</span>
     </li>
 
     <li class="unveil__item">
@@ -28,7 +28,7 @@
           Analyzing the space and developing a conceptual project
         </p>
       </div>
-      <div class="unveil__number">02</div>
+      <span class="unveil__number">02</span>
     </li>
 
     <li class="unveil__item">
@@ -41,7 +41,7 @@
           Creating a detailed design plan including layout, color palette, materials, and furniture
         </p>
       </div>
-      <div class="unveil__number">03</div>
+      <span class="unveil__number">03</span>
     </li>
 
     <li class="unveil__item">
@@ -54,7 +54,7 @@
           Reviewing and adjusting the project according to the client's preferences, signing the contract
         </p>
       </div>
-      <div class="unveil__number">04</div>
+      <span class="unveil__number">04</span>
     </li>
 
     <li class="unveil__item">
@@ -67,7 +67,7 @@
           Coordinating work and ensuring quality control during the execution phase
         </p>
       </div>
-      <div class="unveil__number">05</div>
+      <span class="unveil__number">05</span>
     </li>
 
     <li class="unveil__item">
@@ -80,7 +80,7 @@
           Final inspection with the client, handing over documents and warranties, completing the project
         </p>
       </div>
-      <div class="unveil__number">06</div>
+      <span class="unveil__number">06</span>
     </li>
   </ul>
 
