--- a/src/html/client-resources/_request.html
+++ b/src/html/client-resources/_request.html
@@ -4,15 +4,7 @@
       Ask the Design Pros
     </h2>
     <div class="request__content">
-      <div class="request__imgs">
-        <div class="request__img overlay" style="background-image: url('./images/client-resources/request-img-1.png');width: 400px; height: 420px;"></div>
-        <div class="request__img overlay" style="background-image: url('./images/client-resources/request-img-2.png');width: 400px; height: 200px;"></div>
-      </div>
-
-      <div class="request__imgs">
-        <div class="request__img overlay" style="background-image: url('./images/client-resources/request-img-3.png');width: 250px; height: 200px;"></div>
-        <div class="request__img overlay" style="background-image: url('./images/client-resources/request-img-4.png');width: 250px; height: 423px;"></div>
-      </div>
+      <div class="guide__imgs" style="background-image: url('./images/client-resources/ask-the-design-pros.jpeg');width: 691px; height: 654px;"></div>
 
       <form class="request__form">
         
