--- a/src/html/home/_inspired.html
+++ b/src/html/home/_inspired.html
@@ -5,35 +5,37 @@
   </h2>
 
   <ul class="inspired__grid">
-    <li class="inspired__item">
-      <img class="inspired__image" src="./images/home/inspired/inspired-1.jpeg" alt="More colors"
-        width="500" height="800">
-      <h3>
-        More colors
-      </h3>
-    </li>
-
-    <li class="inspired__item">
-      <img class="inspired__image" src="./images/home/inspired/inspired-2.jpeg" alt="More aesthetics"
+    <li class="inspired__items">
+      <div class="inspired__item">
+        <img class="inspired__image" src="./images/home/inspired/inspired-1.jpeg" alt="More colors"
+          width="500" height="800">
+        <h3>
+          More colors
+        </h3>
+      </div>
+      <div class="inspired__item">
+        <img class="inspired__image" src="./images/home/inspired/inspired-3.jpeg" alt="White is always in fashion"
         width="584" height="414">
-      <h3>
-        More aesthetics
-      </h3>
+        <h3>
+          White is always in fashion
+        </h3>
+      </div>
     </li>
-
-    <li class="inspired__item">
-      <img class="inspired__image" src="./images/home/inspired/inspired-3.jpeg" alt="White is always in fashion"
-      width="584" height="414">
-      <h3>
-        White is always in fashion
-      </h3>
-    </li>
-    <li class="inspired__item">
-      <img class="inspired__image" src="./images/home/inspired/inspired-4.jpeg" alt="Personal space"
-      width="500" height="800">
-      <h3>
-        Personal space
-      </h3>
+    <li class="inspired__items">
+      <div class="inspired__item">
+        <img class="inspired__image" src="./images/home/inspired/inspired-2.jpeg" alt="More aesthetics"
+          width="584" height="414">
+        <h3>
+          More aesthetics
+        </h3>
+      </div>
+      <div class="inspired__item">
+        <img class="inspired__image" src="./images/home/inspired/inspired-4.jpeg" alt="Personal space"
+        width="500" height="800">
+        <h3>
+          Personal space
+        </h3>
+      </div>
     </li>
   </ul>
 </section>
