--- a/src/html/home/_review.html
+++ b/src/html/home/_review.html
@@ -1,30 +1,31 @@
 <section class="review review--client-resources">
-    <h2>
-        Our Clients Speak
-    </h2>
     <div class="review__slider">
+        <div class="review__header">
+            <div class="review__author">
+                <div class="review__name">
+                    <img class="review__avatar" src="./images/home/review/paul.jpeg" alt="Paul Myers review" width="48"
+                    height="48">
+                    <h3>
+                        Paul Myers
+                    </h3>
+                </div>
+                <svg>
+                    <use xlink:href="./icons/stars.svg"></use>
+                </svg>
+            </div>
+
+            <h2>
+                Our Clients Speak
+            </h2>
+        </div>
         <ul class="review__list">
             <li class="review__item">
-                <div class="review__content">
-                    <div class="review__header">
-                        <div class="review__author">
-                            <div class="review__name">
-                                <img class="review__avatar" src="./images/home/review/paul.jpeg" alt="Paul Myers review" width="48"
-                                height="48">
-                                <h3>
-                                    Paul Myers
-                                </h3>
-                            </div>
-                            <button class="btn btn--review btn--reverse btn--slider btn--next" type="button"></button>
-                        </div>
-                        <svg>
-                            <use xlink:href="./icons/stars.svg"></use>
-                        </svg>
-                    </div>
-                </div>
-        
                 <div class="review__image">
                     <img src="./images/home/review/img-1.jpeg" alt="Paul Myers review" width="450" height="300">
+                    <div class="review__text">
+                        <p>The new interior design is simply magnificent! Everything
+                            is perfectly balanced, creating a cozy and stylish atmosphere. I am very pleased with the result</p>
+                    </div>
                 </div>
             </li>
             <li class="review__item">
