fix portfolio,client pages

--- a/src/client-resources.html
+++ b/src/client-resources.html
@@ -10,7 +10,7 @@
       <include src="./html/client-resources/_hero.html"></include>
       <div class="container">
         <include src="./html/client-resources/_request.html"></include>
-        <include src="./html/client-resources/_review.html"></include>
+        <include src="./html/home/_review.html"></include>
       </div>
     </main>
 
