--- a/src/html/portfolio/_inspired.html
+++ b/src/html/portfolio/_inspired.html
@@ -10,7 +10,7 @@
         <li class="inspired__item">
           <a href="project-lobby.html">
             <img class="inspired__image" src="./images/portfolio/inspired/inspired-1.jpeg" alt="lobby" width="500" height="800">
-            <p style="width: 500px">The design of an office lobby that blends modern elements and functionality to create an attractive and professional entrance space</p>
+            <p>The design of an office lobby that blends modern elements and functionality to create an attractive and professional entrance space</p>
           </a>
         </li>
     
@@ -24,7 +24,7 @@
         <li class="inspired__item">
           <a href="project-apartment-3.html">
             <img class="inspired__image" src="./images/portfolio/inspired/inspired-3.jpeg" alt="apartment" width="500" height="800">
-            <p style="width: 500px">The interior design of an apartment room, where contemporary elegance meets functional simplicity to craft a space that embodies both style and comfort</p>
+            <p>The interior design of an apartment room, where contemporary elegance meets functional simplicity to craft a space that embodies both style and comfort</p>
           </a>
         </li>
       </ul>
@@ -41,7 +41,7 @@
         <li class="inspired__item inspired__item--right">
           <a href="project-apartment-2.html">
             <img class="inspired__image" src="./images/portfolio/inspired/inspired-5.jpeg" alt=" apartment"  width="500" height="800">
-            <p style="width: 500px">The interior design of an apartment room, where modern style meets individual accents to create a space that reflects your uniqueness and taste</p>
+            <p>The interior design of an apartment room, where modern style meets individual accents to create a space that reflects your uniqueness and taste</p>
           </a>
         </li>
     
