--- a/src/services.html
+++ b/src/services.html
@@ -12,7 +12,7 @@
       <div class="container">
         <include src="./html/services/_featured.html"></include>
         <include src="./html/services/_services.html"></include>
-        <include src="./html/services/_review.html"></include>
+        <include src="./html/home/_review.html"></include>
       </div>
     </main>
 
